kubernetes/apps/network/external-service/homeassistant/ingress.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-homeassistant
subsets:
  - addresses:
      - ip: 192.168.10.98
    ports:
      - port: 8123
        name: http
---
apiVersion: v1
kind: Service
metadata:
  name: external-homeassistant
spec:
  ports:
    - port: 80
      targetPort: 8123
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: external
  rules:
  - host: homeassistant.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-homeassistant
            port:
              number: 80
